--- a/A6/aaronreyes_a6/static/index.html
+++ b/A6/aaronreyes_a6/static/index.html
@@ -29,7 +29,7 @@ http://www.tooplate.com/view/2091-ziggy
                   <div align ="right">
                      <div class="service-item">
                         <div class="icon">
-                           <a href = "https://github.com/calvinteng" alt="">
+                           <a href = "https://www.instagram.com/accounts/login/" alt="">
                            <img src="img/LOGIN.png" alt="">
                            </a>
                         </div>
